[package]
name = "hyperliquid_rust_sdk"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
mainnet = []
testnet = []

[dependencies]
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
chrono = "0.4.26"
env_logger = "0.11.8"
futures-util = "0.3.28"
hex = "0.4.3"
http = "1.3.1"
lazy_static = "1.3"
log = "0.4.19"
reqwest = "0.12.19"

rand = "0.9.2"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
